fix iframe size on mobile

--- a/style.css
+++ b/style.css
@@ -900,8 +900,14 @@ footer {
     .section-selector {
         --gap: 5px;
     }
+    
     .section-selector h2 {
         font-size: 7vw;
         padding: .25rem 1rem;
+    }
+
+    #iframe-inner {
+        width: 90vw;
+        height: 90vh;
     }
 }
